--- a/css/main.css
+++ b/css/main.css
@@ -101,26 +101,23 @@ h1 {
 p {
   line-height: 1.5rem; }
 
-.logo {
-  padding: 20px 0px 40px 0px; }
-  .logo img {
-    width: 130px;
-    height: auto; }
-
 /* Header */
 header nav {
   display: none; }
+header .logo {
+  padding: 20px 0px 40px 0px; }
+  header .logo img {
+    height: auto;
+    width: 130px; }
 
 /* Hero */
 #hero {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center; }
   #hero .hero-image {
-    background-image: url("../img/hero.png");
-    background-position: center;
-    background-size: cover;
+    background: url("../img/hero.png") center/cover;
     height: 300px;
     width: 100%; }
   #hero h1 {
@@ -133,10 +130,10 @@ header nav {
   font-size: 1rem;
   line-height: 1.5rem; }
 #our-culture .culture-content {
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   margin: 25px 0px; }
   #our-culture .culture-content article {
     margin-bottom: 15px; }
@@ -146,8 +143,8 @@ header nav {
   padding-bottom: 15px; }
 #our-culture .culture-button {
   background: #0688fa;
-  border-radius: 5px;
   border: 1px solid #0688fa;
+  border-radius: 5px;
   padding: 15px 0px;
   text-align: center;
   width: 100%; }
@@ -167,16 +164,16 @@ header nav {
 #company-history {
   margin: 50px 0px; }
   #company-history .timeline-background {
+    background: #eff8ff;
+    height: 500px;
     position: relative;
     width: 100%;
-    height: 500px;
-    background: #eff8ff;
     z-index: -100; }
   #company-history .timeline {
+    align-content: center;
     display: flex;
     margin: 50px 0px;
-    justify-content: space-between;
-    align-content: center; }
+    justify-content: space-between; }
     #company-history .timeline .dates {
       color: #329dfa;
       display: flex;
@@ -191,8 +188,8 @@ header nav {
       content: " ";
       height: 500px;
       margin-left: 23px;
-      width: 3px;
       position: absolute;
+      width: 3px;
       z-index: -20; }
     #company-history .timeline .desc {
       display: flex;
@@ -211,16 +208,16 @@ header nav {
     background: url(../img/offices-bg-desktop.png);
     background-size: cover;
     content: " ";
-    position: absolute;
-    width: 100%;
     height: 1000px;
+    position: absolute;
     top: 40px;
+    width: 100%;
     z-index: -100; }
   #offices .office-locations {
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
     padding-bottom: 75px;
     text-align: center;
     width: 100%; }
@@ -240,31 +237,31 @@ header nav {
 #investors {
   padding-bottom: 75px; }
   #investors .investors-content {
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
     padding-top: 40px; }
     #investors .investors-content article {
+      align-items: center;
       background: white;
       border-radius: 5px;
       box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.08);
       display: flex;
+      height: 145px;
       justify-content: space-between;
-      align-items: center;
       margin-bottom: 45px;
-      width: 100%;
-      height: 145px; }
+      width: 100%; }
       #investors .investors-content article img {
         margin: 0 auto; }
 
 /* Demo */
 #demo {
+  align-items: center;
   background: #329dfa;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   margin: 50px 0px;
   text-align: center; }
   #demo h1 {
@@ -293,10 +290,10 @@ header nav {
     #demo .white-button:hover {
       background: none;
       box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
-      transition: 2s background; }
-    #demo .white-button a:hover {
       color: white;
-      transition: 2s color; }
+      transition: 2s background, 1s color; }
+    #demo .white-button a:hover {
+      color: white; }
   #demo .white-outline-button {
     background: none;
     border: 1px solid white;
@@ -309,21 +306,20 @@ header nav {
     #demo .white-outline-button:hover {
       background: white;
       box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
-      transition: 2s background; }
+      transition: 2s background, 1s color; }
     #demo .white-outline-button a:hover {
-      color: #329dfa !important;
-      transition: 1s color; }
+      color: #329dfa !important; }
 
 /* Footer */
 footer .footer-content {
+  align-items: flex-start;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
   flex-wrap: wrap;
-  width: 97%;
   font-size: 0.8rem;
   line-height: 1.2rem;
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+  width: 97%; }
   footer .footer-content article.footer-logo {
     padding-bottom: 40px;
     width: 100%; }
@@ -344,33 +340,33 @@ footer .footer-content {
   footer .footer-content .divider {
     display: none; }
 footer .footer-social-media {
-  margin: 10px 0px;
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+  margin: 10px 0px;
   padding-top: 30px;
   text-align: center; }
   footer .footer-social-media::before {
-    position: absolute;
-    content: " ";
     background: #f4f4f4;
-    width: 100%;
+    content: " ";
     height: 320px;
     margin-top: 60px;
     padding: 0;
+    position: absolute;
+    width: 100%;
     z-index: -100; }
   footer .footer-social-media i {
     border-radius: 25px;
     color: white;
-    margin: 0px 10px;
-    line-height: inherit;
-    width: 25px;
     height: 25px;
-    padding: 5px; }
+    line-height: inherit;
+    margin: 0px 10px;
+    padding: 5px;
+    width: 25px; }
   footer .footer-social-media i:hover {
     background: black;
-    transition: 1s background; }
+    transition: 1s background, 1s color; }
   footer .footer-social-media .fa-facebook-f {
     background: #35589d; }
   footer .footer-social-media .fa-twitter {
@@ -390,12 +386,9 @@ footer .copyright {
   padding-bottom: 30px;
   text-align: center; }
 footer .footer-bg-element {
-  background-image: url("../img/waves.png");
-  background-size: cover;
-  background-position: 60% 30%;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 75px; }
+  background: url("../img/waves.png") 60% 30%/cover no-repeat;
+  height: 75px;
+  width: 100%; }
 
 /* Tablet Styles */
 @media (min-width: 768px) {
@@ -407,16 +400,16 @@ footer .footer-bg-element {
   .logo {
     padding: 25px 0px 50px 0px; }
     .logo img {
-      width: 160px;
-      height: auto; }
+      height: auto;
+      width: 160px; }
 
   /* Hero */
   #hero .hero-content {
+    align-items: flex-start;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start; }
+    justify-content: space-between; }
     #hero .hero-content .heading {
       width: 260px; }
     #hero .hero-content article {
@@ -431,16 +424,16 @@ footer .footer-bg-element {
       text-align: center;
       width: 60%; }
     #our-culture .culture-content {
+      align-items: flex-start;
       flex-direction: row;
       justify-content: space-between;
-      align-items: flex-start;
       width: 100%; }
       #our-culture .culture-content article {
         width: 29%; }
     #our-culture .culture-button {
       margin: 0 auto;
-      margin-top: 35px;
       margin-bottom: 100px;
+      margin-top: 35px;
       text-align: center;
       width: 170px; }
       #our-culture .culture-button a {
@@ -461,8 +454,8 @@ footer .footer-bg-element {
     #offices::before {
       top: 90px; }
     #offices h1 {
-      padding-top: 40px;
-      padding-bottom: 60px; }
+      padding-bottom: 60px;
+      padding-top: 40px; }
     #offices .office-locations {
       display: flex;
       flex-direction: row;
@@ -483,11 +476,11 @@ footer .footer-bg-element {
 
   /* Demo */
   #demo {
-    border-radius: 5px;
-    justify-content: space-around;
     align-items: center;
-    margin: 0px 25px;
+    border-radius: 5px;
     height: 215px;
+    justify-content: space-around;
+    margin: 0px 25px;
     padding-bottom: 30px; }
     #demo::before {
       display: none; }
@@ -497,11 +490,11 @@ footer .footer-bg-element {
       justify-content: space-between;
       padding: 0; }
     #demo .white-button {
-      padding: 10px 25px;
-      margin: 0px 10px; }
+      margin: 0px 10px;
+      padding: 10px 25px; }
     #demo .white-outline-button {
-      padding: 10px 25px;
-      margin: 0px 20px; }
+      margin: 0px 20px;
+      padding: 10px 25px; }
 
   /* Footer */
   footer {
@@ -518,9 +511,9 @@ footer .footer-bg-element {
       flex-flow: row-reverse nowrap;
       justify-content: space-between; }
       footer .footer-social-media::before {
-        width: 100%;
         height: 225px;
-        margin-left: 64px; }
+        margin-left: 64px;
+        width: 100%; }
       footer .footer-social-media .social-icons {
         display: flex;
         justify-content: space-between;
@@ -541,15 +534,15 @@ footer .footer-bg-element {
 
   /* Header */
   header .content-wrapper {
-    display: flex;
-    justify-content: space-between;
     align-items: baseline;
-    flex-flow: row nowrap; }
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between; }
     header .content-wrapper .logo {
       padding: 40px 0px 90px 0px; }
       header .content-wrapper .logo img {
-        width: 190px;
-        height: auto; }
+        height: auto;
+        width: 190px; }
     header .content-wrapper nav {
       display: inline-block;
       margin: 10px 0px; }
